--- a/cicd/pipeline/sendmail-task.yaml
+++ b/cicd/pipeline/sendmail-task.yaml
@@ -49,7 +49,7 @@ spec:
       receiver_emails = "$(params.recipients)"
       user = "$user"
       password = "$password"
-      tls = "$tls"
+      tls = $tls
       message = f"""\
       Subject: $(params.subject)
       To: {receiver_emails}
