--- a/cicd/pipeline/sendmail-task.yaml
+++ b/cicd/pipeline/sendmail-task.yaml
@@ -42,7 +42,7 @@ spec:
     script: |
       #!/usr/bin/env python3
       import smtplib, ssl, os
-      #from email.mime.text import MIMEText
+      from email.mime.text import MIMEText
       port = "$port"
       smtp_server = "$url"
       sender_email = "$(params.sender)"
@@ -50,22 +50,35 @@ spec:
       user = "$user"
       password = "$password"
       tls = 'True'
-      message = f"""\
-      Subject: $(params.subject)
-      To: {receiver_emails}
-      From: {sender_email}
-      TLS: {tls}
+   #   message = f"""\
+   #   Subject: $(params.subject)
+   #   To: {receiver_emails}
+   #   From: {sender_email}
+   #   TLS: {tls}
 
-      $(params.body)"""
-      print(message)
-      if tls == 'True':
-          context = ssl.create_default_context()
-          server = smtplib.SMTP_SSL(smtp_server, port, context=context)
-      else:
-          server = smtplib.SMTP(smtp_server, port)
-      if password != '':
-          server.login(user, password)
-      for receiver in [item for item in receiver_emails.split(' ') if item]:
-          server.sendmail(sender_email, receiver, message.encode('utf-8'))
-          # server.sendmail(sender_email, receiver, message.as_string())
-      server.quit()
+      def send_email("$(params.subject)", "$(params.body)", sender_email, receiver_emails, password):
+          msg = MIMEText(body)
+          msg['Subject'] = subject
+          msg['From'] = sender
+          msg['To'] = ', '.join(recipients)
+          with smtplib.SMTP_SSL('smtp.gmail.com', 465) as smtp_server:
+             smtp_server.login(sender, password)
+             smtp_server.sendmail(sender, recipients, msg.as_string())
+          print("Message sent!")
+
+
+      send_email(subject, body, sender, recipients, password)
+
+     # $(params.body)"""
+     # print(message)
+     # if tls == 'True':
+     #     context = ssl.create_default_context()
+     #     server = smtplib.SMTP_SSL(smtp_server, port, context=context)
+     # else:
+     #     server = smtplib.SMTP(smtp_server, port)
+     # if password != '':
+     #     server.login(user, password)
+     # for receiver in [item for item in receiver_emails.split(' ') if item]:
+     #     server.sendmail(sender_email, receiver, message.encode('utf-8'))
+     #     # server.sendmail(sender_email, receiver, message.as_string())
+     # server.quit()
