--- a/cicd/pipeline/sendmail-task.yaml
+++ b/cicd/pipeline/sendmail-task.yaml
@@ -69,14 +69,14 @@ spec:
         </body>
       </html>
       """
-      html_message = MIMEText(body, 'html')
-      html_message['Subject'] = subject
-      html_message['From'] = sender_email
-      html_message['To'] = recipient_email
-      with smtplib.SMTP_SSL('smtp.gmail.com', 465) as server:
-         server.login(sender_email, sender_password)
-         server.sendmail(sender_email, recipient_email, html_message.as_string())
-     
+#      html_message = MIMEText(body, 'html')
+#      html_message['Subject'] = subject
+#      html_message['From'] = sender_email
+#      html_message['To'] = recipient_email
+#      with smtplib.SMTP_SSL('smtp.gmail.com', 465) as server:
+#         server.login(sender_email, sender_password)
+#         server.sendmail(sender_email, recipient_email, html_message.as_string())
+#     
      # def send_email("$(params.subject)", "$(params.body)", sender_email, receiver_emails, password):
 
      # $(params.body)"""
