--- a/cicd/pipeline/sendmail-task.yaml
+++ b/cicd/pipeline/sendmail-task.yaml
@@ -62,13 +62,13 @@ spec:
       sender_password = "$password"
       recipient_email = "recipient@gmail.com"
       subject = "Hello from Python"
-      body = """
-      <html>
-        <body>
-          <p>This is an <b>HTML</b> email sent from Python using the Gmail SMTP server.</p>
-        </body>
-      </html>
-      """
+#      body = """
+#      <html>
+#        <body>
+#          <p>This is an <b>HTML</b> email sent from Python using the Gmail SMTP server.</p>
+#        </body>
+#      </html>
+#      """
 #      html_message = MIMEText(body, 'html')
 #      html_message['Subject'] = subject
 #      html_message['From'] = sender_email
