--- a/cicd/pipeline/sendmail-task.yaml
+++ b/cicd/pipeline/sendmail-task.yaml
@@ -37,6 +37,13 @@ spec:
   - name: send
     image: docker.io/paichayon1/sendgmail-py:0.1
     script: |
-      python sendgmail.py
+      # Usage: python sendgmail.py sender_mail, sender_password, recipient_email, subject, body 
+      env
+      sender_mail =  "gpc.pai0001@gmail.com"
+      sender_password = ""
+      recipient_email = "ptanvann@redhat.com "
+      subject = " Test Subject"
+      body = " Test Boby "
+      python sendgmail.py sender_mail, sender_password, recipient_email, subject, body 
 
 
