--- a/cicd/pipeline/sendmail-task.yaml
+++ b/cicd/pipeline/sendmail-task.yaml
@@ -17,18 +17,9 @@ spec:
     - name: temp
       description: Workspace for temporary
   params:
-  - name: subject
-    type: string
-    description: plain text email subject
-  - name: body
-    type: string
-    description: plain text email body
-  - name: sender
-    type: string
-    description: sender email address
   - name: recipients
     type: string
-    description: recipient email addresses (space delimited list)
+    description: recipient email addresses
   stepTemplate:
     envFrom:
       - secretRef:
@@ -38,13 +29,9 @@ spec:
     image: docker.io/paichayon1/sendgmail-py:0.1
     script: |
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
-      #sender_mail="$user"
-      #sender_password="$password"
-      #echo "$user"
-      #echo "$password"
-      recipient_email="ptanvann@redhat.com "
-      subject=" Test Subject"
-      body=" Test Boby "
-      python sendgmail.py "$user" "$password" "$recipient_email" "$subject" "$body" 
+      #recipient_email="ptanvann@redhat.com "
+      subject="Pipeline Status:"
+      body="<b>Job Name: </b>  xxxx <br> <b>Status: </b> yyyy <br>"
+      python sendgmail.py "$user" "$password" "$(params.recipients)" "$subject" "$.body" 
 
 
