--- a/cicd/pipeline/sendmail-task.yaml
+++ b/cicd/pipeline/sendmail-task.yaml
@@ -29,7 +29,8 @@ spec:
     image: docker.io/paichayon1/sendgmail-py:0.1
     script: |
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
-      #recipient_email="ptanvann@redhat.com "
+      #recipient_email="ptanvann@redhat.com"
+      env
       subject="Pipeline Status:"
       body="<b>Job Name: </b>  xxxx <br> <b>Status: </b> yyyy <br>"
       python sendgmail.py "$user" "$password" "$(params.recipients)" "$subject" "$.body" 
