--- a/cicd/pipeline/sendmail-task.yaml
+++ b/cicd/pipeline/sendmail-task.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/version: "0.1"
   annotations:
-    tekton.dev/pipelines.minVersion: "0.12.1"
+    tekton.dev/pipelines.minVersion: "0.0.1"
     tekton.dev/categories: Messaging
     tekton.dev/tags: mail
     tekton.dev/displayName: "send mail"
@@ -13,9 +13,9 @@ metadata:
 spec:
   description: >-
     This task sends a simple email to receivers via SMTP server
-  workspaces:
-    - name: temp
-      description: Workspace for temporary
+#  workspaces:
+#    - name: temp
+#      description: Workspace for temporary
   params:
   - name: recipients
     type: string
