--- a/cicd/pipeline/myapp-cd-pipeline.yaml
+++ b/cicd/pipeline/myapp-cd-pipeline.yaml
@@ -78,13 +78,13 @@ spec:
       taskRef:
         kind: ClusterTask
         name: tkn
-#    - name: notifymail
-#      params: 
-#        - name: recipients
-#          value: 'ptanvann@redhat.com'
-#      tarkRef:
-#        kind: Task
-#        name: sendmail
+    - name: sendmail
+      taskRef:
+        kind: Task
+        name: sendmail
+      params:
+        - name: recipients
+          value: ptanvann@redhat.com
   workspaces:
     - name: temp
       description: Use Empty Directory
