--- a/cicd/pipeline/myapp-cd-pipeline.yaml
+++ b/cicd/pipeline/myapp-cd-pipeline.yaml
@@ -88,6 +88,8 @@ spec:
       params:
         - name: recipients
           value: ptanvann@redhat.com
+        - name: message
+          value: $(context.pipeline.name)-$(context.pipelineRun.name)-$(tasks.update-manifest.status)-$(tasks.argocd-task-sync-and-wait.status)
       taskRef:
         kind: Task
         name: sendmail-cd
