--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -20,6 +20,9 @@ spec:
   - name: recipients
     type: string
     description: recipient email addresses
+  - name: message
+    type: string
+    description: message
   stepTemplate:
     envFrom:
       - secretRef:
@@ -31,7 +34,7 @@ spec:
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       #recipient_email="ptanvann@redhat.com"
       subject="Pipeline Status:"
-      body="<b>Job Name: </b>  myapp-cd-pipeline - $(context.pipeline.name) <br> <b>Status: </b> $(tasks.update-manifest.status) $(tasks.argocd-task-sync-and-wait.status)<br>"
+      body="<b>Job Name: </b>  myapp-cd-pipeline - $(params.message) <br> <b>Status: </b> $(tasks.update-manifest.status) $(tasks.argocd-task-sync-and-wait.status)<br>"
       python sendgmail.py "$user" "$password" "$(params.recipients)" "$subject" "$body" 
 
 
