--- a/cicd/pipeline/myapp-cd-pipeline.yaml
+++ b/cicd/pipeline/myapp-cd-pipeline.yaml
@@ -89,7 +89,7 @@ spec:
         - name: recipients
           value: ptanvann@redhat.com
         - name: message
-          value: $(context.pipeline.name)-$(context.pipelineRun.name)-$(tasks.update-manifest.status)-$(tasks.argocd-task-sync-and-wait.status)
+          value: $(context.pipeline.name)-$(context.pipelineRun.name)-$(tasks.status)-$(tasks.argocd-task-sync-and-wait.status)
       taskRef:
         kind: Task
         name: sendmail-cd
