--- a/cicd/pipeline/myapp-cd-pipeline.yaml
+++ b/cicd/pipeline/myapp-cd-pipeline.yaml
@@ -90,7 +90,7 @@ spec:
           value: ptanvann@redhat.com
         - name: message
           value:
-#            - "Pipeline Name: $(context.pipeline.name)"
+            - 'Pipeline Name: $(context.pipeline.name)'
             - $(context.pipelineRun.name)
 #          value: "Pipeline Name:"  $(context.pipeline.name)  "<br> PipelineRun Name:" $(context.pipelineRun.name) "<br> <p>Task Status:<br>update-manifest:" $(tasks.update-manifest-task.status) "<br>argocd-task-sync:" $(tasks.argocd-task-sync-and-wait.status)
       taskRef:
