--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -34,7 +34,8 @@ spec:
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       #recipient_email="ptanvann@redhat.com"
       subject="Pipeline Status:"
-      body="<b>Summary Pipeline Status</b><br>$(params.message)<br>"
+      # body="<b>Summary Pipeline Status</b><br>$(params.message)<br>"
+      # body="test"
       python sendgmail.py "$user" "$password" "$(params.recipients)" "$subject" "$body" 
 
 
