--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -21,7 +21,7 @@ spec:
     type: string
     description: recipient email addresses
   - name: message
-    type: array
+    type: string
     description: message
   stepTemplate:
     envFrom:
