--- a/cicd/pipeline/argocd-sync-task.yaml
+++ b/cicd/pipeline/argocd-sync-task.yaml
@@ -44,6 +44,6 @@ spec:
 
         argocd app wait "$appname" --health
 
-      workingDir: $(workspaces.temp.path)
-  workspaces:
-    - name: temp
+#      workingDir: $(workspaces.temp.path)
+#  workspaces:
+#    - name: temp
