--- a/cicd/pipeline/sendmail-task.yaml
+++ b/cicd/pipeline/sendmail-task.yaml
@@ -30,7 +30,8 @@ spec:
     script: |
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       #recipient_email="ptanvann@redhat.com"
-      subject="Pipeline Status:"
+      subject="Pipeline Status:" + $(context.pipeline.name) 
+      echo $subject
       body="<b>Job Name: </b>  xxxx <br> <b>Status: </b> yyyy <br>"
       python sendgmail.py "$user" "$password" "$(params.recipients)" "$subject" "$body" 
 
