--- a/cicd/pipeline/myapp-cd-pipeline.yaml
+++ b/cicd/pipeline/myapp-cd-pipeline.yaml
@@ -90,8 +90,8 @@ spec:
         - name: recipients
           value: ptanvann@redhat.com
         - name: message
-          value: $(context.pipeline.name)
-          # <br> PipelineRun Name: $(context.pipelineRun.name) <br> <p>Task Status:<br>update-manifest: $(tasks.update-manifest-task.status) <br>argocd-task-sync: $(tasks.argocd-task-sync-and-wait.status)"
+          value: "TEST"
+          # <br> PipelineRun Name:$(context.pipeline.name)  $(context.pipelineRun.name) <br> <p>Task Status:<br>update-manifest: $(tasks.update-manifest-task.status) <br>argocd-task-sync: $(tasks.argocd-task-sync-and-wait.status)"
       taskRef:
         kind: Task
         name: sendmail-cd
