--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -13,9 +13,6 @@ metadata:
 spec:
   description: >-
     This task sends a simple email to receivers via SMTP server
-#  workspaces:
-#    - name: temp
-#      description: Workspace for temporary
   params:
   - name: recipients
     type: string
@@ -31,8 +28,8 @@ spec:
   - name: send
     image: docker.io/paichayon1/sendgmail-py:0.1
     script: |
-      echo $(context.pipeline.name) 
-      #echo ${params.message}
+      #echo $(context.pipeline.name) 
+      echo ${params.message}
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       #recipient_email="ptanvann@redhat.com"
       #subject="Pipeline Status:"
