--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -29,7 +29,7 @@ spec:
     image: docker.io/paichayon1/sendgmail-py:0.1
     script: |
       #echo $(context.pipeline.name) 
-      echo ${params.message}
+      echo "message:" ${params.message}
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       #recipient_email="ptanvann@redhat.com"
       #subject="Pipeline Status:"
