--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -28,7 +28,7 @@ spec:
   - name: send
     image: docker.io/paichayon1/sendgmail-py:0.1
     script: |
-      echo "$(context.pipeline.name)"
+      # echo "$(context.pipeline.name)"
       echo "message: ${params.message}"
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       #recipient_email="ptanvann@redhat.com"
