--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -30,6 +30,7 @@ spec:
     script: |
       # echo "$(context.pipeline.name)"
       echo "message:tttt"
+      echo $(params.message)
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       #recipient_email="ptanvann@redhat.com"
       #subject="Pipeline Status:"
