--- a/cicd/pipeline/myapp-cd-pipeline.yaml
+++ b/cicd/pipeline/myapp-cd-pipeline.yaml
@@ -82,7 +82,7 @@ spec:
         - name: pipeline_name
           value: $(context.pipeline.name) 
         - name: pipelinerun_name
-          value: $(context.pipelinerun.name)             
+          value: $(context.pipelineRun.name)             
           # <br> PipelineRun Name:$(context.pipeline.name)  $(context.pipelineRun.name) <br> <p>Task Status:<br>update-manifest: $(tasks.update-manifest-task.status) <br>argocd-task-sync: $(tasks.argocd-task-sync-and-wait.status)"
       taskRef:
         kind: Task
