--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -60,6 +60,6 @@ spec:
         dif=$(git diff)
         echo $dif
         echo ######################
-        git commit -m "update image $(params.git_repo_name):$(params.image_tag) on $deploy_env"
-        git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main
+        #git commit -m "update image $(params.git_repo_name):$(params.image_tag) on $deploy_env"
+        #git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main
 
