--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -51,16 +51,24 @@ spec:
 
         git clone https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git
         cd tekton-pipeline
+        
+        echo "##### checkout ######""
         git checkout origin/main
+        
+        echo "##### config ######""
         git config --global user.name "tekton_pipeline"
         git config --global user.email "tektonPipeline@domain.local"
+        
+        echo "##### yq ######""
         yq -i '.spec.template.spec.containers[0].image = "$(params.image_repo_url)/$(params.git_repo_name):$(params.image_tag)"' ./app/myapp/env/$deploy_env/deployment.yaml
+        
+        echo "##### add ######""
         git add ./app/myapp/env/$deploy_env/deployment.yaml
 
-        echo ##### Check Diff ######
+        echo "##### Check Diff ######"
         dif=$(git diff)
-        echo $dif
-        echo ######################
+        echo "$dif"
+        echo "######################""
 
         #git commit -m "update image $(params.git_repo_name):$(params.image_tag) on $deploy_env"
         #git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main
