--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -66,9 +66,13 @@ spec:
         git add ./app/myapp/env/$deploy_env/deployment.yaml
 
         echo "##### Check Diff ######"
-        git diff > chk.txt
-        cat chk.txt
-        echo "######################"
+        dif=$(git diff)
+        if [[ $dif == "" ]]; then
+            echo "Not Dif"
+        else
+            echo "Dif"
+        fi  
+
 
         #git commit -m "update image $(params.git_repo_name):$(params.image_tag) on $deploy_env"
         #git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main
