--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -67,7 +67,7 @@ spec:
         git add ./app/myapp/env/$deploy_env/deployment.yaml
 
         echo "##### Check Diff ######"
-        export dif="$(git diff --exitcode)"
+        export dif=$(git diff)
         env
         if [[ $dif == "" ]]; then
             echo "Not Dif"
