--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -69,6 +69,9 @@ spec:
 
         echo "##### Check Diff ######"
         export dif=$(git diff)
+        git diff > dif.txt
+        ls -la
+        cat dif.txt
         env
         echo $dif
         if [[ $dif == "" ]]; then
