--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -66,13 +66,12 @@ spec:
         
         echo "##### add ######"
         git add ./app/myapp/env/$deploy_env/deployment.yaml
+        git commit -m "update image $(params.git_repo_name):$(params.image_tag) on $deploy_env"
 
         echo "##### Check Diff ######"
         git status
         echo "#######################"
-        ls -la
-        cat dif.txt
-        env
+        # env
         echo $dif
         if [[ $dif == "" ]]; then
             echo "Not Dif"
@@ -80,7 +79,6 @@ spec:
             echo "Dif"
         fi  
 
-
-        #git commit -m "update image $(params.git_repo_name):$(params.image_tag) on $deploy_env"
+        
         #git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main
 
