--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -52,32 +52,23 @@ spec:
 
         git clone https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git
         cd tekton-pipeline
-        
-        echo "##### checkout ######"
         git checkout origin/main
-        
-        echo "##### config ######"
         git config --global user.name "tekton_pipeline"
         git config --global user.email "tektonPipeline@domain.local"
-        
-        echo "##### yq ######""
         yq -i '.spec.template.spec.containers[0].image = "$(params.image_repo_url)/$(params.git_repo_name):$(params.image_tag)"' ./app/myapp/env/$deploy_env/deployment.yaml
-        
-        echo "##### add ######"
         git add ./app/myapp/env/$deploy_env/deployment.yaml
         git commit -m "update image $(params.git_repo_name):$(params.image_tag) on $deploy_env"
-
-        echo "##### Check Diff ######"
-        git status
-        echo "#######################"
-        # env
-        echo $dif
-        if [[ $dif == "" ]]; then
-            echo "Not Dif"
-        else
-            echo "Dif"
-        fi  
-
-
         git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main
+
+        # echo "##### Check Diff ######"
+        # git status
+        # echo "#######################"
+        # if [[ $dif == "" ]]; then
+        #     echo "Not Dif"
+        # else
+        #     echo "Dif"
+        # fi  
+
+
+        
 
