--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -60,7 +60,9 @@ spec:
         echo "##### Git Status 1 ######"
         change=$(git status | grep changed)
         echo "#######################"
+        echo "xxxxxxxxxxxxxxxxxxxxxx"      
         echo $change
+        echo "xxxxxxxxxxxxxxxxxxxxxx"
         # if [[ $dif == "" ]]; then
         #     echo "Not Dif"
         # else
