--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -56,9 +56,9 @@ spec:
         git config --global user.name "tekton_pipeline"
         git config --global user.email "tektonPipeline@domain.local"
         yq -i '.spec.template.spec.containers[0].image = "$(params.image_repo_url)/$(params.git_repo_name):$(params.image_tag)"' ./app/myapp/env/$deploy_env/deployment.yaml
-        git add ./app/myapp/env/$deploy_env/deployment.yaml
+        git add --ignore-errors ./app/myapp/env/$deploy_env/deployment.yaml
         echo "##### Git Status 1 ######"
-        change=$(git status | grep changed) || { echo "Error getting git status"; exit 1; }
+        change=$(git status --ignore-errors | grep changed) || { echo "Error getting git status"; exit 1; }
         echo "#######################"
         echo "xxxxxxxxxxxxxxxxxxxxxx"      
         echo "$change"
