--- a/cicd/pipeline/update-manifest-task.yaml
+++ b/cicd/pipeline/update-manifest-task.yaml
@@ -55,11 +55,11 @@ spec:
         git checkout origin/main
         git config --global user.name "tekton_pipeline"
         git config --global user.email "tektonPipeline@domain.local"
-        echo "will update $(params.git_repo_name):$(params.image_tag) on $deploy_env"
+        echo "###########################"
+        echo "will update $(params.image_repo_url)/$(params.git_repo_name):$(params.image_tag) on $deploy_env"
+        echo "###########################"
         yq -i '.spec.template.spec.containers[0].image = "$(params.image_repo_url)/$(params.git_repo_name):$(params.image_tag)"' ./app/myapp/env/$deploy_env/deployment.yaml
         git add --ignore-errors ./app/myapp/env/$deploy_env/deployment.yaml
-        git status
-        git diff
         git commit -m "update image $(params.git_repo_name):$(params.image_tag) on $deploy_env"
         git push https://$GIT_CREDS_USR:$GIT_CREDS_PSW@github.com/paichayon321/tekton-pipeline.git HEAD:main
 
