--- a/cicd/pipeline/myapp-cd-pipeline.yaml
+++ b/cicd/pipeline/myapp-cd-pipeline.yaml
@@ -78,7 +78,7 @@ spec:
         - name: recipients
           value: ptanvann@redhat.com
         - name: message
-          value: $(tasks.update-manifest-task.status) "|" $(tasks.argocd-task-sync-and-wait.status)
+          value: $(tasks.update-manifest-task.results.image_tag) "|" $(tasks.update-manifest-task.results.image_tag) "|" $(tasks.update-manifest-task.status) "|" $(tasks.argocd-task-sync-and-wait.status)
         - name: pipeline_name
           value: $(context.pipeline.name) 
         - name: pipelinerun_name
