--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -35,7 +35,7 @@ spec:
       echo $(params.message)
       echo $(params.pipeline_name)
       echo $(params.pipelinerun_name)
-      body_temp="test <br> $(params.message) <br> $(params.pipeline_name)"
+      body_temp="test <br> " + $(params.message) + " <br> " + $(params.pipeline_name)
       echo "$body_temp"
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       # recipient_email="ptanvann@redhat.com"
