--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -36,13 +36,13 @@ spec:
       echo $(params.pipeline_name)
       echo $(params.pipelinerun_name)
       #body_temp="test <br> ''' $(params.message) ''' " <br> " + $(params.pipeline_name)
-      body_temp="test <br> "
+      body_temp="test <br> $(params.message)"
       echo "$body_temp"
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       # recipient_email="ptanvann@redhat.com"
       subject="Pipeline status of $(params.pipeline_name)-$(params.pipelinerun_name)"
       echo "$subject"
-      body="<b>Summary Pipeline Status</b><br>$(params.message)<br>"
+      #body="<b>Summary Pipeline Status</b><br>$(params.message)<br>"
       #body="test"
       #python sendgmail.py "$user" "$password" "$(params.recipients)" "$subject" "$body" 
 
