--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -33,12 +33,13 @@ spec:
     image: docker.io/paichayon1/sendgmail-py:0.1
     script: |
       echo $(params.message)
-      image_tag=$(echo $(params.message) | cut -d'|' -f1 | tr -d '|')
+      image_tag=$(echo $(params.message) | cut -d'|' -f1)
+      environment=$(echo $(params.message) | cut -d'|' -f2)
       echo $image_tag
       echo $(params.pipeline_name)
       echo $(params.pipelinerun_name)
       #body_temp="test <br> ''' $(params.message) ''' " <br> " + $(params.pipeline_name)
-      body_temp="test <br> $(params.message)"
+      body_temp="test <br> $image_tag <br> $environment"
       echo "$body_temp"
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       # recipient_email="ptanvann@redhat.com"
