--- a/cicd/pipeline/sendmail-cd-task.yaml
+++ b/cicd/pipeline/sendmail-cd-task.yaml
@@ -32,19 +32,19 @@ spec:
   - name: send
     image: docker.io/paichayon1/sendgmail-py:0.1
     script: |
-      echo $(params.message)
+      #echo $(params.message)
+      #echo $image_tag
+      #echo $(params.pipeline_name)
+      #echo $(params.pipelinerun_name)
       image_tag=$(echo $(params.message) | cut -d'|' -f1)
       environment=$(echo $(params.message) | cut -d'|' -f2)
-      update_manifest_status=$(echo $(params.message) | cut -d'|' -f3-)
-      echo $image_tag
-      echo $(params.pipeline_name)
-      echo $(params.pipelinerun_name)
-      #body_temp="test <br> ''' $(params.message) ''' " <br> " + $(params.pipeline_name)
-      body_temp="test <br> $image_tag <br> $environment <br> $update_manifest_status"
+      task_status=$(echo $(params.message) | cut -d'|' -f3- | tr '|' '<br>')
+
+      body_temp="test <br> $image_tag <br> $environment <br> $task_status"
       echo "$body_temp"
       # Usage: python sendgmail.py sender_mail sender_password recipient_email subject body 
       # recipient_email="ptanvann@redhat.com"
-      subject="Pipeline status of $(params.pipeline_name)-$(params.pipelinerun_name)"
+      subject="Pipeline status of $(params.pipeline_name) - $(params.pipelinerun_name)"
       echo "$subject"
       #body="<b>Summary Pipeline Status</b><br>$(params.message)<br>"
       #body="test"
